syntax = "proto3";

package placementgroup;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/placementgroup/protos";

////////////////////////////////////////////////////////////////////////////////

message AlterPlacementGroupMembershipRequest {
    string ZoneId = 1;
    string GroupId = 2;
    repeated string DisksToAdd = 3;
    repeated string DisksToRemove = 4;
}

message AlterPlacementGroupMembershipTaskState {
    AlterPlacementGroupMembershipRequest Request = 1;
}
